litepicker fix week days displayed too wide in English language

--- a/assets/public/sass/partials/_calendar.scss
+++ b/assets/public/sass/partials/_calendar.scss
@@ -187,7 +187,7 @@
 
                     > div {
                         padding: 5px 0;
-                        font-size: 85%;
+                        font-size: 0.5em;
                         flex: 1;
                         width: var(--litepickerDayWidth);
                         text-align: center;
